--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 
                 <div class="row">
                     <div class="gr-12">
+                </div>
+
+                <div class="row">
+                    <div class="gr-12">
                         <a href="https://www.behance.net/gallery/54107587/Guentac-OEzdemir-New-Single-Falaka" target="_blank"><img src="assets/img/Work_01.png" alt="Güntaç Özdemir" width="100%" height="auto" srcset="assets/img/Work_13@2x.jpg"></a>
                     </div>
                 </div>
